--- a/webdeveloper/styles/portfolio.css
+++ b/webdeveloper/styles/portfolio.css
@@ -10,7 +10,7 @@ body {
 
 .btn-primary {
     font-size: 20px;
-font-weight: 700;
+    font-weight: 700;
     border-radius: 5px;
     background: #FD6E0A;
     color: white;
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 50px 230px;
 }
 
 .nav-title {
@@ -33,9 +34,42 @@ nav {
 nav>ul {
     display: flex;
     align-items: center;
+
 }
 
 nav li {
     list-style: none;
     margin-right: 50px;
+    text-decoration: none;
+}
+
+nav a {
+    text-decoration: none;
+    color: #474747;
+}
+
+
+
+/* header related styles */
+.header {
+    background-color: #fff8f3;
+    width: 1600px;
+    height: 837px;
+    margin-left: 300px;
+}
+
+.header .banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .propic {
+    width: 550px;
+    height: 676px;
+}
+
+.banner{
+    display: flex;
+    margin-top: -120px;
 }
