--- a/webdeveloper/styles/portfolio.css
+++ b/webdeveloper/styles/portfolio.css
@@ -15,6 +15,15 @@ body {
     background: #FD6E0A;
     color: white;
     border: 0px;
+
+}
+
+.section-title {
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    
 }
 
 /* nav related styles */
@@ -69,7 +78,49 @@ nav a {
     height: 676px;
 }
 
-.banner{
+.banner {
     display: flex;
     margin-top: -120px;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.banner-greetings {
+    font-size: 45px;
+    margin-bottom: 5px;
+}
+
+.banner-title {
+    font-size: 80px;
+    font-weight: 700;
+    margin-top: 0px;
+    width: 500px;
+    height: 115px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.banner-description {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.banner .btn-primary {
+    margin-top: 30px;
+}
+
+.banner-content {
+    /* max-width: 500px; */
+}
+
+/* main section styles */
+
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 230px 0px;
 }
